--- a/package.json
+++ b/package.json
@@ -10,17 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
+    "ejs-locals": "~1.0.2",
     "express": "~4.13.4",
-    "mongodb": "^2.2.5",
-    "mongoose": "4.5.8",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
-    "serve-favicon": "~2.3.0",
-    "ejs-locals": "1.0.2",
-    "crypto": "0.0.3",
-    "connect-mongo": "1.3.2",
-    "nconf": "0.8.4",
-    "express-session": "1.14.1",
-    "async": "2.0.1"
+    "serve-favicon": "~2.3.0"
   }
 }
