--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "mongodb": "^2.2.27",
     "mongoose": "^4.10.2"
   }
 }
