--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mongodb": "^2.2.27",
-    "mongoose": "^4.10.2"
+    "mongoose": "^4.10.2",
+    "node-sass": "^4.5.3",
+    "node-sass-middleware": "^0.11.0"
   }
 }
